corrected application properties for postgres

--- a/springboot-backend-api-for-spacecraft/src/main/resources/application.properties
+++ b/springboot-backend-api-for-spacecraft/src/main/resources/application.properties
@@ -1,26 +1,26 @@
 #For Local System
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spacecraftswithrv?zeroDateTimeBehavior=convertToNull
-spring.datasource.username=wdd
-spring.datasource.password=wdd
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/spacecraftswithrv?zeroDateTimeBehavior=convertToNull
+#spring.datasource.username=wdd
+#spring.datasource.password=wdd
+#
 
-#spring.datasource.username=root
-#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+#CommonProperties
 spring.datasource.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=9094 
 
 #spring.profiles.active=production
 #----------------------------
 
 #For Heroku Postgres
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/astronautswithreact?zeroDateTimeBehavior=convertToNull
-#spring.datasource.username=root
-#spring.datasource.password=mysql
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/astronautswithreact?zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 
